fix verlical alignment on about page

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -26,7 +26,9 @@
 
 /*----- /Main -----*/
 
-.about {
+.about,
+.gallery,
+.nums {
 	position: relative;
 	top: 15vh;
 	height: 85vh;
@@ -47,7 +49,6 @@
 .aboutTxt__wrap {
 	width: 50%;
 	box-sizing: border-box;
-	padding-right: 5%;
 }
 .about__head {
 	display: inline-block;
@@ -65,7 +66,6 @@
 }
 
 .aboutGallery__wrap {
-	margin-top: 10%;
 	padding: 5% 5%;
 	background-color: $txt;
 	display: flex;
@@ -114,13 +114,10 @@
 	margin: 0;
 }
 @media only screen and (max-width: 1200px) {
-	.about {
-		height: auto;
-	}
+	.about,
 	.gallery,
 	.nums {
-		position: relative;
-		top: 15vh;
+		height: auto;
 	}
 }
 @media only screen and (max-width: 1025px) {
@@ -145,6 +142,22 @@
 	.logo360 {
 		background-position: center top;
 	}
+	.aboutNums {
+		margin: 0;
+	}	
+	.aboutNum__item {
+		width: 100%;
+		padding: 5% 5%;
+		&:nth-child(2n) {
+			border-left: 1px solid $svgTxt;
+		}
+	}
+	.about__num {
+		margin: 0 5% 0 0;
+	}
+	.footer {
+		margin-top: 0;
+	}
 }
 @media only screen and (max-width: 820px) {
 	.aboutTxt {
@@ -160,16 +173,6 @@
 	}
 	.about__txt {
 		font-size: 1.6em;
-	}
-	.aboutNum__item {
-		width: 100%;
-		padding: 5% 5%;
-		&:nth-child(2n) {
-			border-left: 1px solid $svgTxt;
-		}
-	}
-	.about__num {
-		margin: 0 5% 0 0;
 	}
 }
 @media only screen and (max-width: 770px) and (orientation: portrait) {
@@ -219,7 +222,6 @@
 		font-size: 6em;
 	}
 	.aboutNum__item {
-		padding: 5% 0;
 		border-left: none;
 		border-right: none;
 		&:nth-child(2n) {
@@ -236,11 +238,16 @@
 		height: 92vh;
 	}
 }
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 420px) {
 	.about__num {
 		font-size: 5em;
 	}
 	.aboutNum__txt {
 		font-size: 1.5em;
+	}
+}
+@media only screen and (max-width: 359px) {
+	.aboutNum__txt {
+		font-size: 1.4em;
 	}
 }
